--- a/smartcontract.html
+++ b/smartcontract.html
@@ -43,6 +43,7 @@ var contractAddress = '0xcc2c5e67c62b1a4e19c45de22dc2125af6133364';
 var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function","stateMutability":"nonpayable"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"x","type":"uint256"}],"payable":false,"type":"function","stateMutability":"view"}];
 var simpleStorageContract;
 var simpleStorage;
+var simplestorage2;
 window.addEventListener('load', function() {
   // Checking if Web3 has been injected by the browser (Mist/MetaMask)
   if (typeof web3 !== 'undefined') {
